# simple-proxy

./: .gitignore  Cargo.toml
src/: certificates.rs  errors.rs  main.rs  server.rs
src/certificates/: handler.rs  mod.rs  store.rs  watcher.rs
tests/: tests.rs  util.rs
tests/data/certs/: snakeoil.crt  snakeoil.key
