[package]
name = "simple-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-lock = "3.4.1"
cfg-if = "1.0.4"
http = "1.3.1"
hyper = { version = "1.7.0", features = ["server", "client", "http1", "http2"] }
notify = { version = "8.2.0", default-features = false, features = ["crossbeam-channel", "fsevent-sys"] }
notify-debouncer-full = { version = "0.6.0", default-features = false, features = ["crossbeam-channel"] }
rustls = { version = "0.23.35", features = ["std"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
webpki-roots = "1.0.4"
papaya = "0.2.3"
itertools = "0.14.0"
camino = "1.2.1"
crossbeam-channel = "0.5.15"
x509-parser = "0.18.0"
rustls-pki-types = "1.13.0"

futures-rustls = { version = "0.26.0", features = ["aws-lc-rs"] }
smol = { version = "2.0.2" }
smol-hyper = { version = "0.1.1" }

# Tokio support
futures-io = "0.3.31"
futures = "0.3.31"
http-body-util = "0.1.3"
async-executor = "1.13.3"
blocking = "1.6.2"

[lints.rust]
# FIXME: For early dev, remove before public release
dead_code = "allow"
unused = "allow"

[dev-dependencies]
macro_rules_attribute = "0.2.2"
smol-macros = "0.1.1"
test-log = "0.2.18"
